Program4/program4.output
Grammar

    0 $accept: program $end

    1 program: classdec
    2        | program classdec

    3 classdec: CLASS IDEN classbody

    4 classbody: LBRACE RBRACE
    5          | LBRACE vardecplus RBRACE
    6          | LBRACE constdecplus RBRACE
    7          | LBRACE methdecplus RBRACE
    8          | LBRACE vardecplus constdecplus RBRACE
    9          | LBRACE vardecplus methdecplus RBRACE
   10          | LBRACE constdecplus methdecplus RBRACE
   11          | LBRACE vardecplus constdecplus methdecplus RBRACE

   12 methdecplus: methoddec
   13            | methdecplus methoddec

   14 constdecplus: constdec
   15             | constdecplus constdec

   16 vardecplus: vardec
   17           | vardecplus vardec

   18 methoddec: type IDEN LPAREN paramlist RPAREN block
   19          | VOID IDEN LPAREN paramlist RPAREN block
   20          | type IDEN LPAREN paramlist error block
   21          | VOID IDEN LPAREN paramlist error block

   22 constdec: IDEN LPAREN paramlist RPAREN block
   23         | IDEN error paramlist RPAREN block
   24         | IDEN LPAREN paramlist error block

   25 vardec: type IDEN SEMI
   26       | type IDEN error

   27 paramlist: %empty
   28          | paramplus

   29 paramplus: param
   30          | paramplus COMMA param

   31 param: type IDEN

   32 statement: SEMI
   33          | name EQ exp SEMI
   34          | name EQ exp error
   35          | name LPAREN arglist RPAREN SEMI
   36          | name LPAREN arglist RPAREN error
   37          | name LPAREN arglist error SEMI
   38          | PRINT LPAREN arglist RPAREN SEMI
   39          | PRINT LPAREN arglist RPAREN error
   40          | PRINT LPAREN arglist error SEMI
   41          | condstatement
   42          | WHILE LPAREN exp RPAREN statement
   43          | WHILE LPAREN exp error statement
   44          | RETURN optexp SEMI
   45          | RETURN optexp error
   46          | block

   47 condstatement: IF LPAREN exp RPAREN statement
   48              | IF LPAREN exp error statement
   49              | IF LPAREN exp RPAREN statement ELSE statement
   50              | IF LPAREN exp error statement ELSE statement

   51 block: LBRACE RBRACE
   52      | LBRACE locvardecplus RBRACE
   53      | LBRACE stateplus RBRACE
   54      | LBRACE locvardecplus stateplus RBRACE

   55 stateplus: statement
   56          | stateplus statement

   57 locvardecplus: locvardec
   58              | locvardecplus locvardec

   59 locvardec: type IDEN SEMI
   60          | type IDEN error

   61 optexp: %empty
   62       | exp

   63 exp: name
   64    | NUM
   65    | NLL
   66    | name LPAREN RPAREN
   67    | name LPAREN error
   68    | READ LPAREN RPAREN
   69    | READ LPAREN error
   70    | READ error RPAREN
   71    | newexp
   72    | exp relop exp
   73    | exp sumop exp
   74    | exp proop exp
   75    | unyop exp
   76    | LPAREN exp RPAREN
   77    | LPAREN exp error

   78 newexp: NEW IDEN LPAREN arglist RPAREN
   79       | NEW IDEN LPAREN arglist error
   80       | NEW simpleType expstar brackstar

   81 brackstar: %empty
   82          | brackstar DOUBBRACK

   83 expstar: %empty
   84        | expstar LBRACK exp RBRACK
   85        | expstar LBRACK exp error

   86 arglist: %empty
   87        | explist

   88 explist: exp
   89        | explist COMMA exp

   90 name: THIS
   91     | IDEN
   92     | name DOT IDEN
   93     | name LBRACK exp RBRACK
   94     | name LBRACK exp error

   95 type: simpleType
   96     | type DOUBBRACK

   97 simpleType: INT
   98           | IDEN

   99 relop: DEQ
  100      | NEQ
  101      | LEQ
  102      | GEQ
  103      | GT
  104      | LT

  105 sumop: PLUS
  106      | MINUS
  107      | OR

  108 proop: MULT
  109      | DIVD
  110      | MOD
  111      | AND

  112 unyop: PLUS
  113      | MINUS
  114      | BANG


Terminals, with rules where they appear

$end (0) 0
error (256) 20 21 23 24 26 34 36 37 39 40 43 45 48 50 60 67 69 70 77
    79 85 94
DOT (258) 92
THIS (259) 90
LBRACK (260) 84 85 93 94
RBRACK (261) 84 93
DOUBBRACK (262) 82 96
LBRACE (263) 4 5 6 7 8 9 10 11 51 52 53 54
RBRACE (264) 4 5 6 7 8 9 10 11 51 52 53 54
INT (265) 97
IDEN (266) 3 18 19 20 21 22 23 24 25 26 31 59 60 78 79 91 92 98
NUM (267) 64
NLL (268) 65
READ (269) 68 69 70
NEW (270) 78 79 80
LPAREN (271) 18 19 20 21 22 24 35 36 37 38 39 40 42 43 47 48 49 50
    66 67 68 69 76 77 78 79
RPAREN (272) 18 19 22 23 35 36 38 39 42 47 49 66 68 70 76 78
IF (273) 47 48 49 50
ELSE (274) 49 50
DEQ (275) 99
NEQ (276) 100
LEQ (277) 101
GEQ (278) 102
GT (279) 103
LT (280) 104
PLUS (281) 105 112
MINUS (282) 106 113
OR (283) 107
MULT (284) 108
DIVD (285) 109
MOD (286) 110
AND (287) 111
BANG (288) 114
SEMI (289) 25 32 33 35 37 38 40 44 59
EQ (290) 33 34
COMMA (291) 30 89
RETURN (292) 44 45
WHILE (293) 42 43
PRINT (294) 38 39 40
VOID (295) 19 21
CLASS (296) 3
RO (297)
SO (298)
PO (299)
UO (300)
DE (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1 2, on right: 0 2
classdec (49)
    on left: 3, on right: 1 2
classbody (50)
    on left: 4 5 6 7 8 9 10 11, on right: 3
methdecplus (51)
    on left: 12 13, on right: 7 9 10 11 13
constdecplus (52)
    on left: 14 15, on right: 6 8 10 11 15
vardecplus (53)
    on left: 16 17, on right: 5 8 9 11 17
methoddec (54)
    on left: 18 19 20 21, on right: 12 13
constdec (55)
    on left: 22 23 24, on right: 14 15
vardec (56)
    on left: 25 26, on right: 16 17
paramlist (57)
    on left: 27 28, on right: 18 19 20 21 22 23 24
paramplus (58)
    on left: 29 30, on right: 28 30
param (59)
    on left: 31, on right: 29 30
statement (60)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46, on right:
    42 43 47 48 49 50 55 56
condstatement (61)
    on left: 47 48 49 50, on right: 41
block (62)
    on left: 51 52 53 54, on right: 18 19 20 21 22 23 24 46
stateplus (63)
    on left: 55 56, on right: 53 54 56
locvardecplus (64)
    on left: 57 58, on right: 52 54 58
locvardec (65)
    on left: 59 60, on right: 57 58
optexp (66)
    on left: 61 62, on right: 44 45
exp (67)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77, on right:
    33 34 42 43 47 48 49 50 62 72 73 74 75 76 77 84 85 88 89 93 94
newexp (68)
    on left: 78 79 80, on right: 71
brackstar (69)
    on left: 81 82, on right: 80 82
expstar (70)
    on left: 83 84 85, on right: 80 84 85
arglist (71)
    on left: 86 87, on right: 35 36 37 38 39 40 78 79
explist (72)
    on left: 88 89, on right: 87 89
name (73)
    on left: 90 91 92 93 94, on right: 33 34 35 36 37 63 66 67 92 93
    94
type (74)
    on left: 95 96, on right: 18 20 25 26 31 59 60 96
simpleType (75)
    on left: 97 98, on right: 80 95
relop (76)
    on left: 99 100 101 102 103 104, on right: 72
sumop (77)
    on left: 105 106 107, on right: 73
proop (78)
    on left: 108 109 110 111, on right: 74
unyop (79)
    on left: 112 113 114, on right: 75


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program   go to state 2
    classdec  go to state 3


State 1

    3 classdec: CLASS . IDEN classbody

    IDEN  shift, and go to state 4


State 2

    0 $accept: program . $end
    2 program: program . classdec

    $end   shift, and go to state 5
    CLASS  shift, and go to state 1

    classdec  go to state 6


State 3

    1 program: classdec .

    $default  reduce using rule 1 (program)


State 4

    3 classdec: CLASS IDEN . classbody

    LBRACE  shift, and go to state 7

    classbody  go to state 8


State 5

    0 $accept: program $end .

    $default  accept


State 6

    2 program: program classdec .

    $default  reduce using rule 2 (program)


State 7

    4 classbody: LBRACE . RBRACE
    5          | LBRACE . vardecplus RBRACE
    6          | LBRACE . constdecplus RBRACE
    7          | LBRACE . methdecplus RBRACE
    8          | LBRACE . vardecplus constdecplus RBRACE
    9          | LBRACE . vardecplus methdecplus RBRACE
   10          | LBRACE . constdecplus methdecplus RBRACE
   11          | LBRACE . vardecplus constdecplus methdecplus RBRACE

    RBRACE  shift, and go to state 9
    INT     shift, and go to state 10
    IDEN    shift, and go to state 11
    VOID    shift, and go to state 12

    methdecplus   go to state 13
    constdecplus  go to state 14
    vardecplus    go to state 15
    methoddec     go to state 16
    constdec      go to state 17
    vardec        go to state 18
    type          go to state 19
    simpleType    go to state 20


State 8

    3 classdec: CLASS IDEN classbody .

    $default  reduce using rule 3 (classdec)


State 9

    4 classbody: LBRACE RBRACE .

    $default  reduce using rule 4 (classbody)


State 10

   97 simpleType: INT .

    $default  reduce using rule 97 (simpleType)


State 11

   22 constdec: IDEN . LPAREN paramlist RPAREN block
   23         | IDEN . error paramlist RPAREN block
   24         | IDEN . LPAREN paramlist error block
   98 simpleType: IDEN .

    error   shift, and go to state 21
    LPAREN  shift, and go to state 22

    DOUBBRACK  reduce using rule 98 (simpleType)
    IDEN       reduce using rule 98 (simpleType)


State 12

   19 methoddec: VOID . IDEN LPAREN paramlist RPAREN block
   21          | VOID . IDEN LPAREN paramlist error block

    IDEN  shift, and go to state 23


State 13

    7 classbody: LBRACE methdecplus . RBRACE
   13 methdecplus: methdecplus . methoddec

    RBRACE  shift, and go to state 24
    INT     shift, and go to state 10
    IDEN    shift, and go to state 25
    VOID    shift, and go to state 12

    methoddec   go to state 26
    type        go to state 27
    simpleType  go to state 20


State 14

    6 classbody: LBRACE constdecplus . RBRACE
   10          | LBRACE constdecplus . methdecplus RBRACE
   15 constdecplus: constdecplus . constdec

    RBRACE  shift, and go to state 28
    INT     shift, and go to state 10
    IDEN    shift, and go to state 11
    VOID    shift, and go to state 12

    methdecplus  go to state 29
    methoddec    go to state 16
    constdec     go to state 30
    type         go to state 27
    simpleType   go to state 20


State 15

    5 classbody: LBRACE vardecplus . RBRACE
    8          | LBRACE vardecplus . constdecplus RBRACE
    9          | LBRACE vardecplus . methdecplus RBRACE
   11          | LBRACE vardecplus . constdecplus methdecplus RBRACE
   17 vardecplus: vardecplus . vardec

    RBRACE  shift, and go to state 31
    INT     shift, and go to state 10
    IDEN    shift, and go to state 11
    VOID    shift, and go to state 12

    methdecplus   go to state 32
    constdecplus  go to state 33
    methoddec     go to state 16
    constdec      go to state 17
    vardec        go to state 34
    type          go to state 19
    simpleType    go to state 20


State 16

   12 methdecplus: methoddec .

    $default  reduce using rule 12 (methdecplus)


State 17

   14 constdecplus: constdec .

    $default  reduce using rule 14 (constdecplus)


State 18

   16 vardecplus: vardec .

    $default  reduce using rule 16 (vardecplus)


State 19

   18 methoddec: type . IDEN LPAREN paramlist RPAREN block
   20          | type . IDEN LPAREN paramlist error block
   25 vardec: type . IDEN SEMI
   26       | type . IDEN error
   96 type: type . DOUBBRACK

    DOUBBRACK  shift, and go to state 35
    IDEN       shift, and go to state 36


State 20

   95 type: simpleType .

    $default  reduce using rule 95 (type)


State 21

   23 constdec: IDEN error . paramlist RPAREN block

    INT   shift, and go to state 10
    IDEN  shift, and go to state 25

    $default  reduce using rule 27 (paramlist)

    paramlist   go to state 37
    paramplus   go to state 38
    param       go to state 39
    type        go to state 40
    simpleType  go to state 20


State 22

   22 constdec: IDEN LPAREN . paramlist RPAREN block
   24         | IDEN LPAREN . paramlist error block

    INT   shift, and go to state 10
    IDEN  shift, and go to state 25

    $default  reduce using rule 27 (paramlist)

    paramlist   go to state 41
    paramplus   go to state 38
    param       go to state 39
    type        go to state 40
    simpleType  go to state 20


State 23

   19 methoddec: VOID IDEN . LPAREN paramlist RPAREN block
   21          | VOID IDEN . LPAREN paramlist error block

    LPAREN  shift, and go to state 42


State 24

    7 classbody: LBRACE methdecplus RBRACE .

    $default  reduce using rule 7 (classbody)


State 25

   98 simpleType: IDEN .

    $default  reduce using rule 98 (simpleType)


State 26

   13 methdecplus: methdecplus methoddec .

    $default  reduce using rule 13 (methdecplus)


State 27

   18 methoddec: type . IDEN LPAREN paramlist RPAREN block
   20          | type . IDEN LPAREN paramlist error block
   96 type: type . DOUBBRACK

    DOUBBRACK  shift, and go to state 35
    IDEN       shift, and go to state 43


State 28

    6 classbody: LBRACE constdecplus RBRACE .

    $default  reduce using rule 6 (classbody)


State 29

   10 classbody: LBRACE constdecplus methdecplus . RBRACE
   13 methdecplus: methdecplus . methoddec

    RBRACE  shift, and go to state 44
    INT     shift, and go to state 10
    IDEN    shift, and go to state 25
    VOID    shift, and go to state 12

    methoddec   go to state 26
    type        go to state 27
    simpleType  go to state 20


State 30

   15 constdecplus: constdecplus constdec .

    $default  reduce using rule 15 (constdecplus)


State 31

    5 classbody: LBRACE vardecplus RBRACE .

    $default  reduce using rule 5 (classbody)


State 32

    9 classbody: LBRACE vardecplus methdecplus . RBRACE
   13 methdecplus: methdecplus . methoddec

    RBRACE  shift, and go to state 45
    INT     shift, and go to state 10
    IDEN    shift, and go to state 25
    VOID    shift, and go to state 12

    methoddec   go to state 26
    type        go to state 27
    simpleType  go to state 20


State 33

    8 classbody: LBRACE vardecplus constdecplus . RBRACE
   11          | LBRACE vardecplus constdecplus . methdecplus RBRACE
   15 constdecplus: constdecplus . constdec

    RBRACE  shift, and go to state 46
    INT     shift, and go to state 10
    IDEN    shift, and go to state 11
    VOID    shift, and go to state 12

    methdecplus  go to state 47
    methoddec    go to state 16
    constdec     go to state 30
    type         go to state 27
    simpleType   go to state 20


State 34

   17 vardecplus: vardecplus vardec .

    $default  reduce using rule 17 (vardecplus)


State 35

   96 type: type DOUBBRACK .

    $default  reduce using rule 96 (type)


State 36

   18 methoddec: type IDEN . LPAREN paramlist RPAREN block
   20          | type IDEN . LPAREN paramlist error block
   25 vardec: type IDEN . SEMI
   26       | type IDEN . error

    error   shift, and go to state 48
    LPAREN  shift, and go to state 49
    SEMI    shift, and go to state 50


State 37

   23 constdec: IDEN error paramlist . RPAREN block

    RPAREN  shift, and go to state 51


State 38

   28 paramlist: paramplus .
   30 paramplus: paramplus . COMMA param

    COMMA  shift, and go to state 52

    $default  reduce using rule 28 (paramlist)


State 39

   29 paramplus: param .

    $default  reduce using rule 29 (paramplus)


State 40

   31 param: type . IDEN
   96 type: type . DOUBBRACK

    DOUBBRACK  shift, and go to state 35
    IDEN       shift, and go to state 53


State 41

   22 constdec: IDEN LPAREN paramlist . RPAREN block
   24         | IDEN LPAREN paramlist . error block

    error   shift, and go to state 54
    RPAREN  shift, and go to state 55


State 42

   19 methoddec: VOID IDEN LPAREN . paramlist RPAREN block
   21          | VOID IDEN LPAREN . paramlist error block

    INT   shift, and go to state 10
    IDEN  shift, and go to state 25

    $default  reduce using rule 27 (paramlist)

    paramlist   go to state 56
    paramplus   go to state 38
    param       go to state 39
    type        go to state 40
    simpleType  go to state 20


State 43

   18 methoddec: type IDEN . LPAREN paramlist RPAREN block
   20          | type IDEN . LPAREN paramlist error block

    LPAREN  shift, and go to state 49


State 44

   10 classbody: LBRACE constdecplus methdecplus RBRACE .

    $default  reduce using rule 10 (classbody)


State 45

    9 classbody: LBRACE vardecplus methdecplus RBRACE .

    $default  reduce using rule 9 (classbody)


State 46

    8 classbody: LBRACE vardecplus constdecplus RBRACE .

    $default  reduce using rule 8 (classbody)


State 47

   11 classbody: LBRACE vardecplus constdecplus methdecplus . RBRACE
   13 methdecplus: methdecplus . methoddec

    RBRACE  shift, and go to state 57
    INT     shift, and go to state 10
    IDEN    shift, and go to state 25
    VOID    shift, and go to state 12

    methoddec   go to state 26
    type        go to state 27
    simpleType  go to state 20


State 48

   26 vardec: type IDEN error .

    $default  reduce using rule 26 (vardec)


State 49

   18 methoddec: type IDEN LPAREN . paramlist RPAREN block
   20          | type IDEN LPAREN . paramlist error block

    INT   shift, and go to state 10
    IDEN  shift, and go to state 25

    $default  reduce using rule 27 (paramlist)

    paramlist   go to state 58
    paramplus   go to state 38
    param       go to state 39
    type        go to state 40
    simpleType  go to state 20


State 50

   25 vardec: type IDEN SEMI .

    $default  reduce using rule 25 (vardec)


State 51

   23 constdec: IDEN error paramlist RPAREN . block

    LBRACE  shift, and go to state 59

    block  go to state 60


State 52

   30 paramplus: paramplus COMMA . param

    INT   shift, and go to state 10
    IDEN  shift, and go to state 25

    param       go to state 61
    type        go to state 40
    simpleType  go to state 20


State 53

   31 param: type IDEN .

    $default  reduce using rule 31 (param)


State 54

   24 constdec: IDEN LPAREN paramlist error . block

    LBRACE  shift, and go to state 59

    block  go to state 62


State 55

   22 constdec: IDEN LPAREN paramlist RPAREN . block

    LBRACE  shift, and go to state 59

    block  go to state 63


State 56

   19 methoddec: VOID IDEN LPAREN paramlist . RPAREN block
   21          | VOID IDEN LPAREN paramlist . error block

    error   shift, and go to state 64
    RPAREN  shift, and go to state 65


State 57

   11 classbody: LBRACE vardecplus constdecplus methdecplus RBRACE .

    $default  reduce using rule 11 (classbody)


State 58

   18 methoddec: type IDEN LPAREN paramlist . RPAREN block
   20          | type IDEN LPAREN paramlist . error block

    error   shift, and go to state 66
    RPAREN  shift, and go to state 67


State 59

   51 block: LBRACE . RBRACE
   52      | LBRACE . locvardecplus RBRACE
   53      | LBRACE . stateplus RBRACE
   54      | LBRACE . locvardecplus stateplus RBRACE

    THIS    shift, and go to state 68
    LBRACE  shift, and go to state 59
    RBRACE  shift, and go to state 69
    INT     shift, and go to state 10
    IDEN    shift, and go to state 70
    IF      shift, and go to state 71
    SEMI    shift, and go to state 72
    RETURN  shift, and go to state 73
    WHILE   shift, and go to state 74
    PRINT   shift, and go to state 75

    statement      go to state 76
    condstatement  go to state 77
    block          go to state 78
    stateplus      go to state 79
    locvardecplus  go to state 80
    locvardec      go to state 81
    name           go to state 82
    type           go to state 83
    simpleType     go to state 20


State 60

   23 constdec: IDEN error paramlist RPAREN block .

    $default  reduce using rule 23 (constdec)


State 61

   30 paramplus: paramplus COMMA param .

    $default  reduce using rule 30 (paramplus)


State 62

   24 constdec: IDEN LPAREN paramlist error block .

    $default  reduce using rule 24 (constdec)


State 63

   22 constdec: IDEN LPAREN paramlist RPAREN block .

    $default  reduce using rule 22 (constdec)


State 64

   21 methoddec: VOID IDEN LPAREN paramlist error . block

    LBRACE  shift, and go to state 59

    block  go to state 84


State 65

   19 methoddec: VOID IDEN LPAREN paramlist RPAREN . block

    LBRACE  shift, and go to state 59

    block  go to state 85


State 66

   20 methoddec: type IDEN LPAREN paramlist error . block

    LBRACE  shift, and go to state 59

    block  go to state 86


State 67

   18 methoddec: type IDEN LPAREN paramlist RPAREN . block

    LBRACE  shift, and go to state 59

    block  go to state 87


State 68

   90 name: THIS .

    $default  reduce using rule 90 (name)


State 69

   51 block: LBRACE RBRACE .

    $default  reduce using rule 51 (block)


State 70

   91 name: IDEN .
   98 simpleType: IDEN .

    DOUBBRACK  reduce using rule 98 (simpleType)
    IDEN       reduce using rule 98 (simpleType)
    $default   reduce using rule 91 (name)


State 71

   47 condstatement: IF . LPAREN exp RPAREN statement
   48              | IF . LPAREN exp error statement
   49              | IF . LPAREN exp RPAREN statement ELSE statement
   50              | IF . LPAREN exp error statement ELSE statement

    LPAREN  shift, and go to state 88


State 72

   32 statement: SEMI .

    $default  reduce using rule 32 (statement)


State 73

   44 statement: RETURN . optexp SEMI
   45          | RETURN . optexp error

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    $default  reduce using rule 61 (optexp)

    optexp  go to state 98
    exp     go to state 99
    newexp  go to state 100
    name    go to state 101
    unyop   go to state 102


State 74

   42 statement: WHILE . LPAREN exp RPAREN statement
   43          | WHILE . LPAREN exp error statement

    LPAREN  shift, and go to state 103


State 75

   38 statement: PRINT . LPAREN arglist RPAREN SEMI
   39          | PRINT . LPAREN arglist RPAREN error
   40          | PRINT . LPAREN arglist error SEMI

    LPAREN  shift, and go to state 104


State 76

   55 stateplus: statement .

    $default  reduce using rule 55 (stateplus)


State 77

   41 statement: condstatement .

    $default  reduce using rule 41 (statement)


State 78

   46 statement: block .

    $default  reduce using rule 46 (statement)


State 79

   53 block: LBRACE stateplus . RBRACE
   56 stateplus: stateplus . statement

    THIS    shift, and go to state 68
    LBRACE  shift, and go to state 59
    RBRACE  shift, and go to state 105
    IDEN    shift, and go to state 89
    IF      shift, and go to state 71
    SEMI    shift, and go to state 72
    RETURN  shift, and go to state 73
    WHILE   shift, and go to state 74
    PRINT   shift, and go to state 75

    statement      go to state 106
    condstatement  go to state 77
    block          go to state 78
    name           go to state 82


State 80

   52 block: LBRACE locvardecplus . RBRACE
   54      | LBRACE locvardecplus . stateplus RBRACE
   58 locvardecplus: locvardecplus . locvardec

    THIS    shift, and go to state 68
    LBRACE  shift, and go to state 59
    RBRACE  shift, and go to state 107
    INT     shift, and go to state 10
    IDEN    shift, and go to state 70
    IF      shift, and go to state 71
    SEMI    shift, and go to state 72
    RETURN  shift, and go to state 73
    WHILE   shift, and go to state 74
    PRINT   shift, and go to state 75

    statement      go to state 76
    condstatement  go to state 77
    block          go to state 78
    stateplus      go to state 108
    locvardec      go to state 109
    name           go to state 82
    type           go to state 83
    simpleType     go to state 20


State 81

   57 locvardecplus: locvardec .

    $default  reduce using rule 57 (locvardecplus)


State 82

   33 statement: name . EQ exp SEMI
   34          | name . EQ exp error
   35          | name . LPAREN arglist RPAREN SEMI
   36          | name . LPAREN arglist RPAREN error
   37          | name . LPAREN arglist error SEMI
   92 name: name . DOT IDEN
   93     | name . LBRACK exp RBRACK
   94     | name . LBRACK exp error

    DOT     shift, and go to state 110
    LBRACK  shift, and go to state 111
    LPAREN  shift, and go to state 112
    EQ      shift, and go to state 113


State 83

   59 locvardec: type . IDEN SEMI
   60          | type . IDEN error
   96 type: type . DOUBBRACK

    DOUBBRACK  shift, and go to state 35
    IDEN       shift, and go to state 114


State 84

   21 methoddec: VOID IDEN LPAREN paramlist error block .

    $default  reduce using rule 21 (methoddec)


State 85

   19 methoddec: VOID IDEN LPAREN paramlist RPAREN block .

    $default  reduce using rule 19 (methoddec)


State 86

   20 methoddec: type IDEN LPAREN paramlist error block .

    $default  reduce using rule 20 (methoddec)


State 87

   18 methoddec: type IDEN LPAREN paramlist RPAREN block .

    $default  reduce using rule 18 (methoddec)


State 88

   47 condstatement: IF LPAREN . exp RPAREN statement
   48              | IF LPAREN . exp error statement
   49              | IF LPAREN . exp RPAREN statement ELSE statement
   50              | IF LPAREN . exp error statement ELSE statement

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    exp     go to state 115
    newexp  go to state 100
    name    go to state 101
    unyop   go to state 102


State 89

   91 name: IDEN .

    $default  reduce using rule 91 (name)


State 90

   64 exp: NUM .

    $default  reduce using rule 64 (exp)


State 91

   65 exp: NLL .

    $default  reduce using rule 65 (exp)


State 92

   68 exp: READ . LPAREN RPAREN
   69    | READ . LPAREN error
   70    | READ . error RPAREN

    error   shift, and go to state 116
    LPAREN  shift, and go to state 117


State 93

   78 newexp: NEW . IDEN LPAREN arglist RPAREN
   79       | NEW . IDEN LPAREN arglist error
   80       | NEW . simpleType expstar brackstar

    INT   shift, and go to state 10
    IDEN  shift, and go to state 118

    simpleType  go to state 119


State 94

   76 exp: LPAREN . exp RPAREN
   77    | LPAREN . exp error

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    exp     go to state 120
    newexp  go to state 100
    name    go to state 101
    unyop   go to state 102


State 95

  112 unyop: PLUS .

    $default  reduce using rule 112 (unyop)


State 96

  113 unyop: MINUS .

    $default  reduce using rule 113 (unyop)


State 97

  114 unyop: BANG .

    $default  reduce using rule 114 (unyop)


State 98

   44 statement: RETURN optexp . SEMI
   45          | RETURN optexp . error

    error  shift, and go to state 121
    SEMI   shift, and go to state 122


State 99

   62 optexp: exp .
   72 exp: exp . relop exp
   73    | exp . sumop exp
   74    | exp . proop exp

    DEQ    shift, and go to state 123
    NEQ    shift, and go to state 124
    LEQ    shift, and go to state 125
    GEQ    shift, and go to state 126
    GT     shift, and go to state 127
    LT     shift, and go to state 128
    PLUS   shift, and go to state 129
    MINUS  shift, and go to state 130
    OR     shift, and go to state 131
    MULT   shift, and go to state 132
    DIVD   shift, and go to state 133
    MOD    shift, and go to state 134
    AND    shift, and go to state 135

    $default  reduce using rule 62 (optexp)

    relop  go to state 136
    sumop  go to state 137
    proop  go to state 138


State 100

   71 exp: newexp .

    $default  reduce using rule 71 (exp)


State 101

   63 exp: name .
   66    | name . LPAREN RPAREN
   67    | name . LPAREN error
   92 name: name . DOT IDEN
   93     | name . LBRACK exp RBRACK
   94     | name . LBRACK exp error

    DOT     shift, and go to state 110
    LBRACK  shift, and go to state 111
    LPAREN  shift, and go to state 139

    $default  reduce using rule 63 (exp)


State 102

   75 exp: unyop . exp

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    exp     go to state 140
    newexp  go to state 100
    name    go to state 101
    unyop   go to state 102


State 103

   42 statement: WHILE LPAREN . exp RPAREN statement
   43          | WHILE LPAREN . exp error statement

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    exp     go to state 141
    newexp  go to state 100
    name    go to state 101
    unyop   go to state 102


State 104

   38 statement: PRINT LPAREN . arglist RPAREN SEMI
   39          | PRINT LPAREN . arglist RPAREN error
   40          | PRINT LPAREN . arglist error SEMI

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    $default  reduce using rule 86 (arglist)

    exp      go to state 142
    newexp   go to state 100
    arglist  go to state 143
    explist  go to state 144
    name     go to state 101
    unyop    go to state 102


State 105

   53 block: LBRACE stateplus RBRACE .

    $default  reduce using rule 53 (block)


State 106

   56 stateplus: stateplus statement .

    $default  reduce using rule 56 (stateplus)


State 107

   52 block: LBRACE locvardecplus RBRACE .

    $default  reduce using rule 52 (block)


State 108

   54 block: LBRACE locvardecplus stateplus . RBRACE
   56 stateplus: stateplus . statement

    THIS    shift, and go to state 68
    LBRACE  shift, and go to state 59
    RBRACE  shift, and go to state 145
    IDEN    shift, and go to state 89
    IF      shift, and go to state 71
    SEMI    shift, and go to state 72
    RETURN  shift, and go to state 73
    WHILE   shift, and go to state 74
    PRINT   shift, and go to state 75

    statement      go to state 106
    condstatement  go to state 77
    block          go to state 78
    name           go to state 82


State 109

   58 locvardecplus: locvardecplus locvardec .

    $default  reduce using rule 58 (locvardecplus)


State 110

   92 name: name DOT . IDEN

    IDEN  shift, and go to state 146


State 111

   93 name: name LBRACK . exp RBRACK
   94     | name LBRACK . exp error

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    exp     go to state 147
    newexp  go to state 100
    name    go to state 101
    unyop   go to state 102


State 112

   35 statement: name LPAREN . arglist RPAREN SEMI
   36          | name LPAREN . arglist RPAREN error
   37          | name LPAREN . arglist error SEMI

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    $default  reduce using rule 86 (arglist)

    exp      go to state 142
    newexp   go to state 100
    arglist  go to state 148
    explist  go to state 144
    name     go to state 101
    unyop    go to state 102


State 113

   33 statement: name EQ . exp SEMI
   34          | name EQ . exp error

    THIS    shift, and go to state 68
    IDEN    shift, and go to state 89
    NUM     shift, and go to state 90
    NLL     shift, and go to state 91
    READ    shift, and go to state 92
    NEW     shift, and go to state 93
    LPAREN  shift, and go to state 94
    PLUS    shift, and go to state 95
    MINUS   shift, and go to state 96
    BANG    shift, and go to state 97

    exp     go to state 149
    newexp  go to state 100
    name    go to state 101
    unyop   go to state 102


State 114

   59 locvardec: type IDEN . SEMI
   60          | type IDEN . error

    error  shift, and go to state 150
    SEMI   shift, and go to state 151


State 115

   47 condstatement: IF LPAREN exp . RPAREN statement
   48              | IF LPAREN exp . error statement
   49              | IF LPAREN exp . RPAREN statement ELSE statement
   50              | IF LPAREN exp . error statement ELSE statement
   72 exp: exp . relop exp
   73    | exp . sumop exp
   74    | exp . proop exp
